K8s/mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
      - name: mailpit
        image: axllent/mailpit
        ports:
        - containerPort: 8025
        - containerPort: 1025
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit
spec:
  selector:
    app: mailpit
  ports:
    - name: web
      protocol: TCP
      port: 8025
      targetPort: 8025
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
